<resources>
    <string name="app_name">Simple Weather</string>
    <string name="tab_text_today">Today</string>
    <string name="tab_text_tomorrow">Tomorrow</string>
    <string name="tab_text_seven_days">Seven Day</string>

    <!-- Today's Labels and Placeholder Strings -->

    <!-- Today's Primary Strings -->

    <string name="date">June 20th, 2020</string>
    <string name="current_temperature">50\u2103</string>
    <string name="high_temperature">Hi 100\u2109</string>
    <string name="low_temperature">Lo 0</string>
    <string name="precipitation">Precipitation 20%</string>
    <string name="current_forecast">Partly Cloudy</string>

    <!-- Today's Sun Strings -->

    <string name="dawn_title">Dawn</string>
    <string name="sunrise_title">Sunrise</string>
    <string name="solar_noon_title">Noon</string>
    <string name="dusk_title">Dusk</string>
    <string name="sunset_title">Sunset</string>
    <string name="dawn_time">6:00 AM</string>
    <string name="sunrise_time">7:00 PM</string>
    <string name="solar_noon_time">12:00 PM</string>
    <string name="dusk_time">9:00 PM</string>
    <string name="sunset_time">7:00 PM</string>
    <string name="current_time">9:38 AM</string>

    <!-- Today's Current Strings -->

    <string name="current_details_label">Current Details</string>
    <string name="humidity_label">Humidity</string>
    <string name="dew_point_label">Dew Point</string>
    <string name="pressure_label">Pressure</string>
    <string name="cloud_coverage_label">Cloud Coverage</string>
    <string name="uv_label">UV Index</string>

    <string name="visibility_label">Visibility</string>
    <string name="ozone_label">Ozone</string>

    <!-- Hourly Forecast Strings -->
    <string name="hourly_forecast_label">Hourly Forecast</string>
    <string name="hourly_icon">This icon shows the current condition</string>

    <!-- Today's Wind Placeholder Strings -->

    <!-- Today's Temperature Placeholder Strings -->


    <!-- Tomorrows Placeholder Strings -->

    <string name="unit_preference_summary">Use Metric Units</string>
    <string name="unit_preference_title">Measurement Unit Options</string>


    <string name="sunrise_sunset_label">Sunrise and Sunset</string>

    <string name="please_wait">Please Wait&#8230;</string>
    <string name="date_place_holder">July 1, 2020</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="seven_day_details_label">Details</string>


</resources>