<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todays_primary_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDayBackground">


        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/current_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/current_temperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/current_temperature"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/current_time" />


        <TextView
            android:id="@+id/temperature_low"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/low_temperature"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/temperature_high"
            app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

        <TextView
            android:id="@+id/precipitation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/precipitation"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/current_condition"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

        <ImageView
            android:id="@+id/condition_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/low_temperature"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintLeft_toRightOf="@+id/vertical_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_sun_96px_2"
            />

        <TextView
            android:id="@+id/temperature_high"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/high_temperature"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintLeft_toRightOf="@+id/temperature_low"
            app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="181dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/current_forecast"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/vertical_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="214dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>