<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tomorrows_primary_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDayBackground">

        <TextView
            android:id="@+id/tomorrows_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            tools:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tomorrows_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tomorrows_temperature_high"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:gravity="center"
            tools:text="@string/low_temperature"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tomorrows_temperature_low"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tomorrows_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tomorrows_date" />

        <TextView
            android:id="@+id/tomorrows_temperature_low"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:gravity="center"
            tools:text="@string/high_temperature"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tomorrows_horizontal_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tomorrows_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tomorrows_temperature_high" />

        <TextView
            android:id="@+id/tomorrows_precipitation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            tools:text="@string/precipitation"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tomorrows_current_condition"
            app:layout_constraintTop_toBottomOf="@id/tomorrows_horizontal_guideline" />

        <ImageView
            android:id="@+id/tomorrows_condition_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/low_temperature"
            app:layout_constraintBottom_toTopOf="@+id/tomorrows_horizontal_guideline"
            app:layout_constraintLeft_toRightOf="@+id/tomorrows_vertical_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/icons8_sun_96px_2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tomorrows_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="181dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tomorrows_current_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            tools:text="@string/current_forecast"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/tomorrows_vertical_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrows_horizontal_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tomorrows_horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="214dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>